--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "highlight.js": "~7.3.0",
     "docpad-plugin-stylus": "~2.5.0",
     "docpad-plugin-coffeescript": "~2.2.3",
-    "docpad-plugin-jade": "~2.6.1"
+    "docpad-plugin-jade": "~2.6.1",
+    "docpad-plugin-tagging": "~2.0.2"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
