--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "docpad-plugin-stylus": "~2.5.0",
     "docpad-plugin-coffeescript": "~2.2.3",
     "docpad-plugin-jade": "~2.6.1",
-    "docpad-plugin-tagging": "~2.0.2"
+    "docpad-plugin-tagging": "~2.0.2",
+    "docpad-plugin-ghpages": "~2.4.1"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
