--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ env:
   global:
   - secure: b9P9JeciY61ygtamzJF8IJAWYNjthfdWq+cou/omYnqd1qGGhliD3C1mUFjp4kD4vp0ntP9ohMjTAK4oprSTENlzQ3JyE4cVQBmlQNUUg6WeYlv9wkneXKggNgZ8zrBghxVbw+W7JzCMlJ6nyiSLqdAt+p9T4VlXu7Nj+jQ6bWE=
   - GH_REPO="AGresvig/blog.akselgresvig.com"
+branches:
+  except:
+  - gh-pages
 script:
 - docpad deploy-ghpages --env static
 - ./travis/create_loadreports.sh
