Added text plugin for on-demand markdown rendering. Corrected some GA code

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "docpad-plugin-coffeescript": "~2.2.3",
     "docpad-plugin-jade": "~2.6.1",
     "docpad-plugin-tagging": "~2.0.2",
-    "docpad-plugin-ghpages": "~2.4.1"
+    "docpad-plugin-ghpages": "~2.4.1",
+    "docpad-plugin-text": "~2.3.2"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
