--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "docpad-plugin-jade": "~2.6.1",
     "docpad-plugin-tagging": "~2.0.2",
     "docpad-plugin-ghpages": "~2.4.1",
-    "docpad-plugin-text": "~2.3.2"
+    "docpad-plugin-text": "~2.3.2",
+    "docpad-plugin-thumbnails": "~2.1.1"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
