--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "npm": "1.2"
   },
   "dependencies": {
-    "docpad": "~6.54.5",
-    "docpad-plugin-eco": "~2.0.2",
-    "docpad-plugin-livereload": "~2.5.3",
+    "docpad": "~6.64.0",
+    "docpad-plugin-coffeescript": "~2.3.0",
+    "docpad-plugin-eco": "~2.0.3",
+    "docpad-plugin-ghpages": "~2.4.3",
+    "docpad-plugin-jade": "~2.6.2",
+    "docpad-plugin-livereload": "~2.6.0",
     "docpad-plugin-robotskirt": "~2.0.3",
-    "highlight.js": "~7.3.0",
-    "docpad-plugin-stylus": "~2.5.0",
-    "docpad-plugin-coffeescript": "~2.2.3",
-    "docpad-plugin-jade": "~2.6.1",
-    "docpad-plugin-tagging": "~2.0.2",
-    "docpad-plugin-ghpages": "~2.4.1",
+    "docpad-plugin-stylus": "~2.6.0",
+    "docpad-plugin-tags": "~2.0.7",
     "docpad-plugin-text": "~2.3.2",
-    "docpad-plugin-thumbnails": "~2.1.1"
+    "docpad-plugin-thumbnails": "~2.1.1",
+    "highlight.js": "~7.3.0"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
